--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,58 +1,109 @@
-name: CI/CD with Docker
+name: Java CI/CD with Gradle to AWS EC2
 
 on:
-  push:
-    branches: [ "dev" ]
   pull_request:
     branches: [ "dev" ]
-  workflow_dispatch:
+  push:
+    branches: [ "dev" ]
+  workflow_dispatch: # 수동으로 워크플로우를 실행할 수 있도록
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    #    strategy:
+    #      matrix:
+    #      fail-fast: false # 실패해도 킵고잉
+
+    runs-on: ubuntu-24.04-arm
+    # runner 찾기 : https://docs.github.com/ko/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker image
-        run: docker buildx build --platform linux/arm64 -t unsemawang --load .
-
-      - name: Verify Docker images
-        run: docker images
-        
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Tag and Push Docker image
-        if: github.event_name == 'push'
-        run: |
-          docker tag unsemawang nardis0321/kdev3:latest
-          docker push nardis0321/kdev3
-          
+          java-version: '17'
+          distribution: 'corretto'
+
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v4 # https://github.com/actions/cache
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Build with Gradle
+        run: ./gradlew build -x test
+
+      - name: Upload build artifact
+        id: upload-artifact # id로 output 출력 (steps.upload-artifact.outputs.artifact-path) 같은 작업 위해서 id 사용
+        uses: actions/upload-artifact@v4 # https://github.com/actions/upload-artifact
+        with:
+          name: java-build-artifact
+          path: build/libs/*-SNAPSHOT.jar
+
+  dependency-submission:
+
+    runs-on: ubuntu-24.04-arm
+    permissions:
+      contents: write
+    continue-on-error: true
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'corretto'
+
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
   deploy:
-    
-    runs-on: ubuntu-latest
+
+    runs-on: ubuntu-24.04-arm
     needs: build
     if: github.event_name == 'push'
-    
-    steps:
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
-      - name: SSH into EC2 and deploy Docker container
+    steps:
+      - name: Download build artifact
+        id: download-artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: java-build-artifact # 업로드한 이름과 일치할 것
+          path: build/libs
+
+      - name: Display structure of downloaded files
+        run: ls -R build/libs
+
+      - name: Set up SSH key
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-            sudo docker pull nardis0321/kdev3
-            sudo docker compose down || true
-            sudo docker compose up -d
-          EOF
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Copy app.jar to EC2
+        run: |
+          scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ./build/libs/unsemawang-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/app.jar
+
+      - name: SSH into EC2 and stop old app.jar (if running)
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "
+            # 기존에 실행 중인 java 프로세스를 종료합니다.
+            if pgrep -f 'java -jar /home/ubuntu/app.jar' > /dev/null; then
+              echo 'Stopping existing app.jar process...'
+              pkill -f 'java -jar /home/ubuntu/app.jar'
+            else
+              echo 'No running app.jar process found.'
+            fi
+          "
+
+      - name: SSH into EC2 and run new app.jar
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "
+            nohup java -jar /home/ubuntu/app.jar &
+          "
